test/assets/invalid/signatures/either-wrong-order.hs
a :: Either Bool Int
a = Right True